--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dopefolio",
   "version": "1.0.0",
-  "description": "",
+  "description": "<div align=\"center\">\r   <img src=\"https://i.postimg.cc/CxZXqhWM/ezgif-com-video-to-gif-1.gif\" alt=\"Dopefolio Demo\" width=\"100%\" />\r   <br>\r </div>",
   "main": "index.js",
   "scripts": {
     "compile:scss": "node-sass sass/main.scss css/style.css -w",
@@ -16,5 +16,13 @@
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^8.3.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/patilrohan1903-del/port.git"
+  },
+  "bugs": {
+    "url": "https://github.com/patilrohan1903-del/port/issues"
+  },
+  "homepage": "https://github.com/patilrohan1903-del/port#readme"
 }
